# AIM-2023-sim

./: .gitignore  Pandas_데이터분석_기초.ipynb  README.md
aim_virtual_ros/comm_msgs/: CMakeLists.txt  package.xml
aim_virtual_ros/comm_msgs/msg/: gpsLocal.msg  objInfo.msg  objsInfo.msg  vehicleStatus.msg
aim_virtual_ros/morai_data_parser/: CMakeLists.txt  package.xml
aim_virtual_ros/morai_data_parser/include/morai_data_parser/: data_parser.hpp  morai_udp_msg.h
aim_virtual_ros/morai_data_parser/src/: morai_data_parser_node.cpp
